--- a/DoAnTHKHDL.ipynb
+++ b/DoAnTHKHDL.ipynb
@@ -10,6 +10,76 @@
     "    21120096_Hồ Châu Long\n",
     "    21120126_Nguyễn Tấn Hoàng Sa"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from time import sleep\n",
+    "import random\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.common.exceptions import NoSuchElementException, ElementNotInteractableException\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import pandas as pd\n",
+    "\n",
+    "driver = selenium.webdriver.Chrome()\n",
+    "base_url = \"https://ourworldindata.org/explorers/energy?\"\n",
+    "\n",
+    "# Truy cập trang web\n",
+    "def crawl_data(year, type):\n",
+    "    url = base_url+'tab=table&time={y}&facet=none&country=USA~GBR~CHN~OWID_WRL~IND~BRA~ZAF&hideControls=false&Total+or+Breakdown=Select+a+source&Energy+or+Electricity=Primary+energy&Metric=Per+capita+consumption&Select+a+source={t}'.format(y = year, t = type)\n",
+    "    driver.get(url)\n",
+    "    sleep(random.randint(5,10))\n",
+    "\n",
+    "    elems_coutry = driver.find_elements(By.CSS_SELECTOR, \".entity\")\n",
+    "    country = [elem.text for elem in elems_coutry]\n",
+    "\n",
+    "    data =[]\n",
+    "    data.append(0)\n",
+    "    nam = []\n",
+    "    for i in range (1,len(country)+1):\n",
+    "        nam.append(int(year))\n",
+    "        try:\n",
+    "            elem_data = driver.find_element(\"xpath\", \"/html/body/main/div/div[3]/div/div[4]/div/div[2]/table/tbody/tr[{}]/td[2]\".format(i))\n",
+    "            data.append(elem_data.text)\n",
+    "        except NoSuchElementException:\n",
+    "            data.append(None)\n",
+    "\n",
+    "    df = pd.DataFrame(list(zip(country,nam,data)),columns= ['Country','Year',type])\n",
+    "    df = df = df.drop([0], axis=0)\n",
+    "    df = df.drop(labels=df.index[-11:])\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def crawl_type_data(type):\n",
+    "    df = pd.DataFrame(columns= ['Country','Year',type])\n",
+    "    for i in range(2000,2023):\n",
+    "        df1 = crawl_data(i, type)\n",
+    "        df = pd.merge(df, df1 ,how='outer',on=['Country','Year',type])\n",
+    "    return df\n",
+    "\n",
+    "def crawl_full_data(types):\n",
+    "    df = pd.DataFrame(columns= ['Country','Year'])\n",
+    "    for type in types:\n",
+    "        df1 = crawl_type_data(type)\n",
+    "        df = pd.merge(df, df1 ,how='outer',on=['Country','Year'])\n",
+    "    return df\n",
+    "\n",
+    "types = ['Fossil fuels','Gas','Coal','Oil','Solar','Wind','Low-cacbon','Renewables','Hydropower']\n",
+    "#types = ['Fossil fuels','Gas']\n",
+    "df = crawl_full_data(types)\n",
+    "print(df)\n",
+    "df.to_csv(\"data.csv\")\n"
+   ]
   }
  ],
  "metadata": {
