Đọc dữ liệu ở Data ở file khám phá kiểm tra xem đúng hay không

--- a/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
+++ b/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
@@ -1,25 +1,308 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "=====================Tiền Xử Lí Và Khám Phá Dữ Liệu=========================="
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import thư viện\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../Data/data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Fossil fuels</th>\n",
+       "      <th>Gas</th>\n",
+       "      <th>Coal</th>\n",
+       "      <th>Oil</th>\n",
+       "      <th>Solar</th>\n",
+       "      <th>Wind</th>\n",
+       "      <th>Low-cacbon</th>\n",
+       "      <th>Renewables</th>\n",
+       "      <th>Hydropower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>9,741 kWh</td>\n",
+       "      <td>6,207 kWh</td>\n",
+       "      <td>183 kWh</td>\n",
+       "      <td>3,351 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>9,741 kWh</td>\n",
+       "      <td>5 kWh</td>\n",
+       "      <td>5 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>16,062 kWh</td>\n",
+       "      <td>8,712 kWh</td>\n",
+       "      <td>203 kWh</td>\n",
+       "      <td>7,147 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>3 kWh</td>\n",
+       "      <td>16,062 kWh</td>\n",
+       "      <td>2,315 kWh</td>\n",
+       "      <td>2,279 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>65,895 kWh</td>\n",
+       "      <td>10,808 kWh</td>\n",
+       "      <td>31,111 kWh</td>\n",
+       "      <td>23,976 kWh</td>\n",
+       "      <td>7 kWh</td>\n",
+       "      <td>21 kWh</td>\n",
+       "      <td>65,895 kWh</td>\n",
+       "      <td>2,738 kWh</td>\n",
+       "      <td>2,560 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>32,760 kWh</td>\n",
+       "      <td>9,763 kWh</td>\n",
+       "      <td>5,302 kWh</td>\n",
+       "      <td>17,696 kWh</td>\n",
+       "      <td>1 kWh</td>\n",
+       "      <td>25 kWh</td>\n",
+       "      <td>32,760 kWh</td>\n",
+       "      <td>16,103 kWh</td>\n",
+       "      <td>15,443 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>15,569 kWh</td>\n",
+       "      <td>6,450 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>9,119 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>15,569 kWh</td>\n",
+       "      <td>554 kWh</td>\n",
+       "      <td>554 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1835</th>\n",
+       "      <td>1835</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>22,509 kWh</td>\n",
+       "      <td>10,662 kWh</td>\n",
+       "      <td>870 kWh</td>\n",
+       "      <td>10,977 kWh</td>\n",
+       "      <td>538 kWh</td>\n",
+       "      <td>3,096 kWh</td>\n",
+       "      <td>22,509 kWh</td>\n",
+       "      <td>5,820 kWh</td>\n",
+       "      <td>205 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1836</th>\n",
+       "      <td>1836</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>63,836 kWh</td>\n",
+       "      <td>26,049 kWh</td>\n",
+       "      <td>8,103 kWh</td>\n",
+       "      <td>29,684 kWh</td>\n",
+       "      <td>1,589 kWh</td>\n",
+       "      <td>3,385 kWh</td>\n",
+       "      <td>63,836 kWh</td>\n",
+       "      <td>8,912 kWh</td>\n",
+       "      <td>1,993 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1837</th>\n",
+       "      <td>1837</td>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>16,516 kWh</td>\n",
+       "      <td>13,954 kWh</td>\n",
+       "      <td>828 kWh</td>\n",
+       "      <td>1,734 kWh</td>\n",
+       "      <td>14 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>16,516 kWh</td>\n",
+       "      <td>414 kWh</td>\n",
+       "      <td>400 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1838</th>\n",
+       "      <td>1838</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>15,544 kWh</td>\n",
+       "      <td>10,309 kWh</td>\n",
+       "      <td>15 kWh</td>\n",
+       "      <td>5,219 kWh</td>\n",
+       "      <td>0 kWh</td>\n",
+       "      <td>2 kWh</td>\n",
+       "      <td>15,544 kWh</td>\n",
+       "      <td>6,140 kWh</td>\n",
+       "      <td>6,138 kWh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1839</th>\n",
+       "      <td>1839</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>9,510 kWh</td>\n",
+       "      <td>794 kWh</td>\n",
+       "      <td>5,798 kWh</td>\n",
+       "      <td>2,918 kWh</td>\n",
+       "      <td>700 kWh</td>\n",
+       "      <td>214 kWh</td>\n",
+       "      <td>9,510 kWh</td>\n",
+       "      <td>3,473 kWh</td>\n",
+       "      <td>2,548 kWh</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1840 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0         Country  Year Fossil fuels         Gas        Coal  \\\n",
+       "0              0         Algeria  2000    9,741 kWh   6,207 kWh     183 kWh   \n",
+       "1              1       Argentina  2000   16,062 kWh   8,712 kWh     203 kWh   \n",
+       "2              2       Australia  2000   65,895 kWh  10,808 kWh  31,111 kWh   \n",
+       "3              3         Austria  2000   32,760 kWh   9,763 kWh   5,302 kWh   \n",
+       "4              4      Azerbaijan  2000   15,569 kWh   6,450 kWh       0 kWh   \n",
+       "...          ...             ...   ...          ...         ...         ...   \n",
+       "1835        1835  United Kingdom  2022   22,509 kWh  10,662 kWh     870 kWh   \n",
+       "1836        1836   United States  2022   63,836 kWh  26,049 kWh   8,103 kWh   \n",
+       "1837        1837      Uzbekistan  2022   16,516 kWh  13,954 kWh     828 kWh   \n",
+       "1838        1838       Venezuela  2022   15,544 kWh  10,309 kWh      15 kWh   \n",
+       "1839        1839         Vietnam  2022    9,510 kWh     794 kWh   5,798 kWh   \n",
+       "\n",
+       "             Oil      Solar       Wind  Low-cacbon  Renewables  Hydropower  \n",
+       "0      3,351 kWh      0 kWh      0 kWh   9,741 kWh       5 kWh       5 kWh  \n",
+       "1      7,147 kWh      0 kWh      3 kWh  16,062 kWh   2,315 kWh   2,279 kWh  \n",
+       "2     23,976 kWh      7 kWh     21 kWh  65,895 kWh   2,738 kWh   2,560 kWh  \n",
+       "3     17,696 kWh      1 kWh     25 kWh  32,760 kWh  16,103 kWh  15,443 kWh  \n",
+       "4      9,119 kWh      0 kWh      0 kWh  15,569 kWh     554 kWh     554 kWh  \n",
+       "...          ...        ...        ...         ...         ...         ...  \n",
+       "1835  10,977 kWh    538 kWh  3,096 kWh  22,509 kWh   5,820 kWh     205 kWh  \n",
+       "1836  29,684 kWh  1,589 kWh  3,385 kWh  63,836 kWh   8,912 kWh   1,993 kWh  \n",
+       "1837   1,734 kWh     14 kWh      0 kWh  16,516 kWh     414 kWh     400 kWh  \n",
+       "1838   5,219 kWh      0 kWh      2 kWh  15,544 kWh   6,140 kWh   6,138 kWh  \n",
+       "1839   2,918 kWh    700 kWh    214 kWh   9,510 kWh   3,473 kWh   2,548 kWh  \n",
+       "\n",
+       "[1840 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "a897ecb8d91bfc7f294ab6da99f9baa00d09906c3ac640a3c63be6db9bb3112f"
