--- a/ThuThapDuLieu/thu_thap_du_lieu.ipynb
+++ b/ThuThapDuLieu/thu_thap_du_lieu.ipynb
@@ -98,7 +98,7 @@
     "#types = ['Fossil fuels','Gas']\n",
     "df = crawl_full_data(types)\n",
     "print(df)\n",
-    "folder_data = \"../data/\"\n",
+    "folder_data = \"../Data/\"\n",
     "pathData = os.path.join(folder_data, \"data.csv\")\n",
     "df.to_csv(pathData)\n"
    ]
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
