Sửa lại đường dẫn tạo thư mục data

--- a/ThuThapDuLieu/thu_thap_du_lieu.ipynb
+++ b/ThuThapDuLieu/thu_thap_du_lieu.ipynb
@@ -98,7 +98,7 @@
     "#types = ['Fossil fuels','Gas']\n",
     "df = crawl_full_data(types)\n",
     "print(df)\n",
-    "folder_data = \"../data/\"\n",
+    "folder_data = \"../Data/\"\n",
     "pathData = os.path.join(folder_data, \"data.csv\")\n",
     "df.to_csv(pathData)\n"
    ]
