--- a/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
+++ b/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4      5 TWh      5 TWh  0 TWh  0 TWh  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "max                      7093.0            3471.0       1115.0      1988.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
    ],
    "source": [
     "#Test\n",
-    "raw_df = drop_missing_features(df, num_col_info_df.iloc[0], threshold = 75.0)\n",
+    "df = drop_missing_features(df, num_col_info_df.iloc[0], threshold = 75.0)\n",
     "df.info()"
    ]
   },
@@ -542,12 +542,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "        4.4 Điền các giá trị thiếu bằng trung bình các giá trị của cột"
+    "        4.4 Xử lý các hàng không có bất kì dữ liệu nào ngoại trừ \"Country\" và \"Year\":"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(thresh=3) #Chỉ giữ lại các hàng có tối thiểu 3 giá trị, vì 2 giá trị thì chỉ có Country và Year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        4.5 Điền các giá trị thiếu bằng trung bình các giá trị của cột"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,13 +574,13 @@
     "\n",
     "    # Fill NaN values with the mean of the column values\n",
     "    for i in df.columns[df.isnull().any(axis=0)]:    \n",
-    "        df[i].fillna(df[i].mean().round(1),inplace=True)\n",
+    "        df[i].fillna(round(df[i].mean(),1),inplace=True)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -572,22 +588,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1840 entries, 0 to 1839\n",
+      "Index: 1817 entries, 0 to 1839\n",
       "Data columns (total 10 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
-      " 0   Country             1840 non-null   object \n",
-      " 1   Year                1840 non-null   int64  \n",
-      " 2   Fossil fuels (TWh)  1840 non-null   float64\n",
-      " 3   Coal (TWh)          1840 non-null   float64\n",
-      " 4   Oil (TWh)           1840 non-null   float64\n",
-      " 5   Gas (TWh)           1840 non-null   float64\n",
-      " 6   Renewables (TWh)    1840 non-null   float64\n",
-      " 7   Hydropower (TWh)    1840 non-null   float64\n",
-      " 8   Solar (TWh)         1840 non-null   float64\n",
-      " 9   Wind (TWh)          1840 non-null   float64\n",
+      " 0   Country             1817 non-null   object \n",
+      " 1   Year                1817 non-null   int64  \n",
+      " 2   Fossil fuels (TWh)  1817 non-null   float64\n",
+      " 3   Coal (TWh)          1817 non-null   float64\n",
+      " 4   Oil (TWh)           1817 non-null   float64\n",
+      " 5   Gas (TWh)           1817 non-null   float64\n",
+      " 6   Renewables (TWh)    1817 non-null   float64\n",
+      " 7   Hydropower (TWh)    1817 non-null   float64\n",
+      " 8   Solar (TWh)         1817 non-null   float64\n",
+      " 9   Wind (TWh)          1817 non-null   float64\n",
       "dtypes: float64(8), int64(1), object(1)\n",
-      "memory usage: 143.9+ KB\n"
+      "memory usage: 156.1+ KB\n"
      ]
     }
    ],
@@ -599,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +737,7 @@
        "4               5.0               5.0          0.0         0.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -795,12 +811,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_values</th>\n",
-       "      <td>80</td>\n",
+       "      <td>79</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>value_ratios</th>\n",
-       "      <td>{'Algeria': 1.2, 'Argentina': 1.2, 'Singapore': 1.2, 'Saudi Arabia': 1.2, 'Russia': 1.2, 'Romani...</td>\n",
+       "      <td>{'Algeria': 1.3, 'Peru': 1.3, 'Saudi Arabia': 1.3, 'Russia': 1.3, 'Romania': 1.3, 'Qatar': 1.3, ...</td>\n",
        "      <td>{'2000': 4.3, '2012': 4.3, '2021': 4.3, '2020': 4.3, '2019': 4.3, '2018': 4.3, '2017': 4.3, '201...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -810,8 +826,8 @@
       "text/plain": [
        "                                                                                                           Country  \\\n",
        "missing_ratio                                                                                                  0.0   \n",
-       "num_values                                                                                                      80   \n",
-       "value_ratios   {'Algeria': 1.2, 'Argentina': 1.2, 'Singapore': 1.2, 'Saudi Arabia': 1.2, 'Russia': 1.2, 'Romani...   \n",
+       "num_values                                                                                                      79   \n",
+       "value_ratios   {'Algeria': 1.3, 'Peru': 1.3, 'Saudi Arabia': 1.3, 'Russia': 1.3, 'Romania': 1.3, 'Qatar': 1.3, ...   \n",
        "\n",
        "                                                                                                              Year  \n",
        "missing_ratio                                                                                                  0.0  \n",
@@ -819,7 +835,7 @@
        "value_ratios   {'2000': 4.3, '2012': 4.3, '2021': 4.3, '2020': 4.3, '2019': 4.3, '2018': 4.3, '2017': 4.3, '201...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -896,10 +912,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>missing_ratio</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -907,10 +923,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>12.00</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>7.2000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.20</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -918,10 +934,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lower_quartile</th>\n",
-       "      <td>207.75</td>\n",
-       "      <td>8.860</td>\n",
-       "      <td>85.4025</td>\n",
-       "      <td>43.1875</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>8.71</td>\n",
+       "      <td>84.35</td>\n",
+       "      <td>42.81</td>\n",
        "      <td>14.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
@@ -929,32 +945,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>551.50</td>\n",
-       "      <td>46.815</td>\n",
-       "      <td>175.1150</td>\n",
-       "      <td>166.5500</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>45.76</td>\n",
+       "      <td>170.23</td>\n",
+       "      <td>162.09</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>34.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>upper_quartile</th>\n",
-       "      <td>1570.70</td>\n",
-       "      <td>243.800</td>\n",
-       "      <td>563.7700</td>\n",
-       "      <td>411.3000</td>\n",
+       "      <td>1504.0</td>\n",
+       "      <td>228.96</td>\n",
+       "      <td>543.34</td>\n",
+       "      <td>411.30</td>\n",
        "      <td>184.7</td>\n",
        "      <td>123.4</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>36319.00</td>\n",
-       "      <td>24559.490</td>\n",
-       "      <td>11214.0800</td>\n",
-       "      <td>8812.1200</td>\n",
+       "      <td>36319.0</td>\n",
+       "      <td>24559.49</td>\n",
+       "      <td>11214.08</td>\n",
+       "      <td>8812.12</td>\n",
        "      <td>7093.0</td>\n",
        "      <td>3471.0</td>\n",
        "      <td>1115.0</td>\n",
@@ -965,24 +981,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                Fossil fuels (TWh)  Coal (TWh)   Oil (TWh)  Gas (TWh)  \\\n",
-       "missing_ratio                 0.00       0.000      0.0000     0.0000   \n",
-       "min                          12.00       0.000      7.2000     0.0000   \n",
-       "lower_quartile              207.75       8.860     85.4025    43.1875   \n",
-       "median                      551.50      46.815    175.1150   166.5500   \n",
-       "upper_quartile             1570.70     243.800    563.7700   411.3000   \n",
-       "max                       36319.00   24559.490  11214.0800  8812.1200   \n",
+       "                Fossil fuels (TWh)  Coal (TWh)  Oil (TWh)  Gas (TWh)  \\\n",
+       "missing_ratio                  0.0        0.00       0.00       0.00   \n",
+       "min                           12.0        0.00       7.20       0.00   \n",
+       "lower_quartile               202.0        8.71      84.35      42.81   \n",
+       "median                       542.0       45.76     170.23     162.09   \n",
+       "upper_quartile              1504.0      228.96     543.34     411.30   \n",
+       "max                        36319.0    24559.49   11214.08    8812.12   \n",
        "\n",
        "                Renewables (TWh)  Hydropower (TWh)  Solar (TWh)  Wind (TWh)  \n",
        "missing_ratio                0.0               0.0          0.0         0.0  \n",
        "min                          0.0               0.0          0.0         0.0  \n",
        "lower_quartile              14.0               7.0          0.0         0.0  \n",
-       "median                      58.0              35.0          0.0         0.0  \n",
-       "upper_quartile             184.7             123.4          2.0         8.0  \n",
+       "median                      57.0              34.0          0.0         0.0  \n",
+       "upper_quartile             184.7             123.4          2.0         7.0  \n",
        "max                       7093.0            3471.0       1115.0      1988.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1036,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
