Cập nhật nhận xét cho hai câu hỏi, câu hỏi 1 và câu hỏi 3

--- a/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
+++ b/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
@@ -309,6 +309,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nhận xét:**\n",
+    "- Tổng quan ta nhìn thấy ở mỗi loại năng lượng thì lượng năng lượng sử dụng có sự khác nhau giữa các nước, và có sự chênh lệch giữa các nước thuộc top đầu.\n",
+    "- Trong thế kỉ 21 tính tới thời điểm hiện tại thì lượng sử dụng năng lượng hóa thạch luôn nhiều hơn loại năng lượng tái tạo.\n",
+    "- Các nước như Mỹ, Trung Quốc thì hầu hết đều thuộc top đầu dù cho đó có là loại năng lượng nào đi nữa.\n",
+    "- Trung Quốc, Mỹ đa phần đều thuộc top 2 của việc sử dụng các loại năng lượng và có sự chênh lệch lớn so với các nước còn lại.\n",
+    "- Ta thấy hầu hết các nước thuộc top 10 đều là những nước có nền kinh tế phát triển như Trung Quốc, Mỹ, Nhật Bản, chứng tỏ nền kinh tế có sự tác động từ việc sử dụng năng lượng, như là sử dụng năng lượng nhiều thì nền kinh tế càng phát triển.\n",
+    "- Các nước đông dân như Trung Quốc, Ấn Độ, Mỹ đều thuộc top đầu sử dụng các loại năng lượng."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -552,6 +566,19 @@
     "plt.xlabel('Kinh độ')\n",
     "plt.ylabel('Vĩ độ')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nhận xét:**\n",
+    "- Nhìn tổng quan ta thấy sử dụng năng lượng hóa thạch và năng lượng tái tạo phân bố khắp cả thế giới, chứ không chỉ riêng châu lục hay địa phận đặc trưng nào mới sử dụng.\n",
+    "- Trong cùng một biểu đồ, thì việc sử dụng năng lượng của mỗi quốc gia, mỗi vùng lãnh thổ là khác nhau, không có sự đồng đều. Châu Mỹ, châu Âu, châu Á thì mức độ tập trung sử dụng năng lượng cũng như lượng năng lượng nhiều hơn châu Phi.\n",
+    "- Do để cùng một tỉ lệ, nên khi so sánh hai biểu đồ, ta thấy việc sử dụng năng lượng hóa thạch vẫn nhiều hơn là việc sử dụng năng lượng tái tạo => cho thấy thế giới vẫn còn phụ thuộc vào năng lượng hóa thạch là chủ yếu.\n",
+    "- Mỹ, Trung Quốc vẫn là hai quốc gia đi đầu trong việc sử dụng cả năng lượng hóa thạch và năng lượng tái tạo.\n",
+    "- Việc sử dụng sử dụng năng lượng tái tạo cũng có ở nhiều nước chứng tỏ đây có thể là xu thế trong tương lai khi năng lượng hóa thạch ngày càng sẽ cạn kiệt nếu sử dụng quá mức và năng lượng tái tạo có ưu điểm như bảo vệ được môi trường."
    ]
   },
   {
