Update: Nhận xét cho câu hỏi 2

--- a/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
+++ b/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
@@ -459,11 +459,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nhận xét:**\n",
+    "- Mức độ sử dụng \"Năng lượng hóa thạch\" gấp rất nhiều lần \"Năng lượng tái tạo\" tuy nhiên sự tăng trưởng mức độ sử dụng năng lượng tái tạo có xu hướng ổn định hơn (Biểu đồ số 1).\n",
+    "- Mức sử dụng các loại \"Năng lượng hóa thạch\" bị sụt giảm mạnh vào 2 mốc 2009 và 2020 có thể được lý giải do \"Cuộc khủng hoảng kinh tế năm 2008\" và \"Đại dịch COVID_19 năm 2019\" nhưng các loại \"Năng lượng tái tạo\" không bị ảnh ảnh hưởng thậm chí còn tăng (Biểu đồ số 2 và 3).\n",
+    "- Trong các loại \"Năng lượng tái tạo\" thì năng lượng Gió và Mặt trời có tốc độ sử dụng tăng có phần nhanh hơn dù vào năm 2000 mức độ sử dụng là 0 (Biểu đồ số 3).\n",
+    "- Xu thế là sử dụng các loại \"Năng lượng tái tạo\" ít ảnh hưởng đến môi trường ngày càng tăng, tuy nhiên các loại \"Năng lượng hóa thạch\" vẫn chiếm tỷ trọng và nhu cầu sử dụng rất cao.\n",
+    "\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Câu hỏi 3: Ứng với loại năng lượng Fossil Fuels và năng lượng Renewable thì mức độ phân bố lượng sử dụng năng lượng trong thế kỉ 21 trên thế giới như thế nào của các nước ?\n",
+    "**Câu hỏi 3: Ứng với loại năng lượng Fossil Fuels và năng lượng Renewable thì mức độ phân bố lượng sử dụng năng lượng trong thế kỉ 21 trên thế giới như thế nào của các nước ?**\n",
     "- Trả lời câu hỏi giúp chúng ta: \n",
     "    + Có cái nhìn tổng quan sự phân bố sử dụng hai loại năng lượng trên giữa các nước trên thế giới, và giữa các châu lục.\n",
     "    + So sánh mức độ nhiều ít giữa hai loại năng lượng của cùng một nước (do đó cần vẽ hai biểu đồ chung tỉ lệ).\n",
