--- a/Modeling/modeling.ipynb
+++ b/Modeling/modeling.ipynb
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x19e279de210>"
+       "<seaborn.axisgrid.PairGrid at 0x185a0da7650>"
       ]
      },
      "execution_count": 4,
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -610,13 +610,13 @@
    ],
    "source": [
     "#Tạo model\n",
-    "model = DecisionTreeRegressor(random_state= 42)\n",
+    "regressor = DecisionTreeRegressor(random_state= 42)\n",
     "\n",
     "# Train \n",
-    "model.fit(X_train, Y_train)\n",
+    "regressor.fit(X_train, Y_train)\n",
     "\n",
     "# dự đoán trên tập test\n",
-    "Y_pred = model.predict(X_test)\n",
+    "Y_pred = regressor.predict(X_test)\n",
     "\n",
     "# Tính mse\n",
     "mse = mean_squared_error(Y_test, Y_pred)\n",
@@ -632,11 +632,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Cross validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import thw viện\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. Stratified K-Fold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import thư viện\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "sk_folds = StratifiedKFold(n_splits = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.92050434 0.91218929 0.95453136 0.94940891 0.75308812]\n",
+      "Average CV Score:  0.8979444038978313\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(regressor, X, Y, cv = sk_folds)\n",
+    "\n",
+    "print(\"Cross Validation Scores: \", scores)\n",
+    "print(\"Average CV Score: \", scores.mean())\n",
+    "print(\"Number of CV Scores used in Average: \", len(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.7768161  0.89110341 0.86138227 0.89553237 0.8542978 ]\n",
+      "Average CV Score:  0.8558263894085586\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(lr, X, Y, cv = sk_folds)\n",
+    "\n",
+    "print(\"Cross Validation Scores: \", scores)\n",
+    "print(\"Average CV Score: \", scores.mean())\n",
+    "print(\"Number of CV Scores used in Average: \", len(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. Shuffle Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import thư viện\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "\n",
+    "ss = ShuffleSplit(train_size=0.7, test_size=0.2, n_splits = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.92488868 0.90831202 0.91260679 0.75660849 0.9288219 ]\n",
+      "Average CV Score:  0.8862475756635352\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(regressor, X, Y, cv = ss)\n",
+    "\n",
+    "print(\"Cross Validation Scores: \", scores)\n",
+    "print(\"Average CV Score: \", scores.mean())\n",
+    "print(\"Number of CV Scores used in Average: \", len(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.89802704 0.81471593 0.95804653 0.8392471  0.90550766]\n",
+      "Average CV Score:  0.8831088524537014\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(lr, X, Y, cv = ss)\n",
+    "\n",
+    "print(\"Cross Validation Scores: \", scores)\n",
+    "print(\"Average CV Score: \", scores.mean())\n",
+    "print(\"Number of CV Scores used in Average: \", len(scores))"
+   ]
   }
  ],
  "metadata": {
