Update Cross validation cho mô hình Gradient Boosting Regressor

--- a/Modeling/modeling.ipynb
+++ b/Modeling/modeling.ipynb
@@ -934,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = cross_val_score(gb, X, Y, cv = sk_folds)\n",
+    "scores = cross_val_score(gb_final, X, Y, cv = sk_folds)\n",
     "\n",
     "print(\"Cross Validation Scores: \", scores)\n",
     "print(\"Average CV Score: \", scores.mean())\n",
@@ -1023,7 +1023,7 @@
     }
    ],
    "source": [
-    "scores = cross_val_score(gb, X, Y, cv = ss)\n",
+    "scores = cross_val_score(gb_final, X, Y, cv = ss)\n",
     "\n",
     "print(\"Cross Validation Scores: \", scores)\n",
     "print(\"Average CV Score: \", scores.mean())\n",
