--- a/Modeling/modeling.ipynb
+++ b/Modeling/modeling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4               5.0               5.0          0.0         0.0  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,24 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\phanv\\anaconda3\\Lib\\site-packages\\seaborn\\axisgrid.py:118: UserWarning: The figure layout has changed to tight\n",
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\seaborn\\axisgrid.py:123: UserWarning: The figure layout has changed to tight\n",
       "  self._figure.tight_layout(*args, **kwargs)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x293add08a50>"
+       "<seaborn.axisgrid.PairGrid at 0x2537eac6510>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "1704       18.39      83.84      38.74              63.0          1.0"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,15 +449,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE= 1056.127840855288 \n",
-      "R_square= 0.9342081069327172\n",
+      "MSE= 1056.1278408552885 \n",
+      "R_square= 0.934208106932717\n",
       "      Y_test     Y_pred\n",
       "1507     0.0  -2.818911\n",
       "680      0.0   0.191050\n",
@@ -500,15 +500,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE= 1483.0822929608466 \n",
-      "R_square= 0.9342081069327172\n",
+      "MSE= 1483.0822930239112 \n",
+      "R_square= 0.934208106932717\n",
       "      Y_test    Y_pred\n",
       "1507     0.0  1.219870\n",
       "680      0.0  1.817126\n",
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,15 +649,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE= 524.2978328630736 \n",
-      "R_square= 0.9673386633504514\n",
+      "MSE= 570.6845780173954 \n",
+      "R_square= 0.9644489830874436\n",
       "      Y_test     Y_pred\n",
       "1507     0.0   2.472806\n",
       "680      0.0  -0.214782\n",
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,15 +822,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE= 473.7789112850933 \n",
-      "R_square= 0.9704857591448783\n"
+      "MSE= 476.9601233514569 \n",
+      "R_square= 0.9702875843065699\n"
      ]
     }
    ],
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,9 +890,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.77700317 0.89129876 0.86153927 0.89553244 0.85393473]\n",
+      "Average CV Score:  0.8558616717429214\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(lr, X, Y, cv = sk_folds)\n",
     "\n",
@@ -910,9 +928,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.9292814  0.91536164 0.95051094 0.94980399 0.73724422]\n",
+      "Average CV Score:  0.8964404372753991\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(regressor, X, Y, cv = sk_folds)\n",
     "\n",
@@ -930,9 +966,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.87266065 0.93863383 0.97980362 0.96311491 0.9410486 ]\n",
+      "Average CV Score:  0.9390523213270063\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(gb_final, X, Y, cv = sk_folds)\n",
     "\n",
@@ -950,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,9 +1023,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.96622181 0.90346734 0.87161311 0.82411226 0.67306787]\n",
+      "Average CV Score:  0.84769647720733\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(lr, X, Y, cv = ss)\n",
     "\n",
@@ -989,9 +1053,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Scores:  [0.96116336 0.93686361 0.74458178 0.84680838 0.84001396]\n",
+      "Average CV Score:  0.8658862170712022\n",
+      "Number of CV Scores used in Average:  5\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(regressor, X, Y, cv = ss)\n",
     "\n",
@@ -1009,15 +1083,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross Validation Scores:  [0.89408282 0.9668516  0.91120462 0.90933561 0.94943695]\n",
-      "Average CV Score:  0.9261823212347096\n",
+      "Cross Validation Scores:  [0.97801855 0.91367857 0.95483254 0.96834267 0.91049259]\n",
+      "Average CV Score:  0.9450729849239214\n",
       "Number of CV Scores used in Average:  5\n"
      ]
     }
@@ -1041,8 +1115,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Dựa vào MSE và R^2 ta nhận thấy: \n",
-    "        - Trong bộ dữ liệu này việc sử dụng thuật toán Linear Regression và Decision Tree Regression là không hiệu quả.\n",
+    "    Ưu, nhược điểm của các mô hình:\n",
+    "        - Linear Regression và Decision Tree Regression có thời gian phản hôì nhanh. Tuy nhiên, MSE khá lớn\n",
+    "        - Gradient Boosting Regressor có thời gian phản hồi lâu hơn nhiều. Tuy nhiên, nó giảm thiểu được MSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Dựa vào MSE và R^2, cùng với Cross Validation Score ta nhận thấy: \n",
+    "        - Trong bộ dữ liệu này việc sử dụng thuật toán Linear Regression và Decision Tree Regression là chưa thực sự không hiệu quả.\n",
     "        - Như vậy chúng ta có thể sử dụng Gradient Boosting Regressor sau một số hiệu chỉnh là hiệu quả nhất trong 3 phương án này. Tuy nhiêu khi đánh giá về độ hiệu quả trên tập dữ liệu này là chưa cao. "
    ]
   }
