--- a/Modeling/modeling.ipynb
+++ b/Modeling/modeling.ipynb
@@ -848,267 +848,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3. Cross validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    a. Stratified K-Fold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
-    "sk_folds = StratifiedKFold(n_splits = 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.77700317 0.89129876 0.86153927 0.89553244 0.85393473]\n",
-      "Average CV Score:  0.8558616717429214\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(lr, X, Y, cv = sk_folds)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Decision Tree Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.9292814  0.91536164 0.95051094 0.94980399 0.73724422]\n",
-      "Average CV Score:  0.8964404372753991\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(regressor, X, Y, cv = sk_folds)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Gradient Boosting Regressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:725: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.87266065 0.93863383 0.97980362 0.96311491 0.9410486 ]\n",
-      "Average CV Score:  0.9390523213270063\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(gb_final, X, Y, cv = sk_folds)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    b. Shuffle Split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import thư viện\n",
-    "from sklearn.model_selection import ShuffleSplit\n",
-    "\n",
-    "ss = ShuffleSplit(train_size=0.7, test_size=0.2, n_splits = 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.96622181 0.90346734 0.87161311 0.82411226 0.67306787]\n",
-      "Average CV Score:  0.84769647720733\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(lr, X, Y, cv = ss)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Decision Tree Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.96116336 0.93686361 0.74458178 0.84680838 0.84001396]\n",
-      "Average CV Score:  0.8658862170712022\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(regressor, X, Y, cv = ss)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "        - Gradient Boosting Regressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:  [0.97801855 0.91367857 0.95483254 0.96834267 0.91049259]\n",
-      "Average CV Score:  0.9450729849239214\n",
-      "Number of CV Scores used in Average:  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = cross_val_score(gb_final, X, Y, cv = ss)\n",
-    "\n",
-    "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 4. Nhận xét"
+    "##### 3. Nhận xét"
    ]
   },
   {
@@ -1121,10 +865,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Dựa vào MSE và R^2, cùng với Cross Validation Score ta nhận thấy: \n",
+    "    Dựa vào MSE và R^2 ta nhận thấy: \n",
     "        - Trong bộ dữ liệu này việc sử dụng thuật toán Linear Regression và Decision Tree Regression là chưa thực sự không hiệu quả.\n",
     "        - Như vậy chúng ta có thể sử dụng Gradient Boosting Regressor sau một số hiệu chỉnh là hiệu quả nhất trong 3 phương án này. Tuy nhiêu khi đánh giá về độ hiệu quả trên tập dữ liệu này là chưa cao. "
    ]
@@ -1146,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
